@@ -1,0 +1,2 @@
+
+UPDATE `rule_values` SET `rule_name` = 'Pets:UnTargetableSwarmPet' WHERE `rule_name` = 'Pets:TargetableSwarmPet';
