@@ -2,6 +2,9 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 ==12/04/2012==
 Sorvani: (Uleat) Update to inspect (SoF+) and corpses to related to handling power sources. Titanium inspect still broken.
+Vaion: Renamed the rule for targeting swarm pets so that it make sense with the code.
+
+OPTIONAL SQL: utils/sql/svn/2280_optional_rule_targetableswarmpet-rename.sql
 
 ==12/3/2012==
 Vaion: New rule created for handling whether swarm pets are targetable or not.  Set to false for default to allow targeting swarm pets.
